# RayCrate

./: .cursorrules  .gitignore  AGENTS.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: config.rs  lib.rs  main.rs  protocols.rs  router.rs  tun.rs  xray.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TUN_MODE.md
