[package]
name = "raycrate-core"
version = "0.1.0"
edition = "2021"
authors = ["RayCrate Contributors"]
license = "MIT"
description = "Core engine for RayCrate cross-platform proxy client"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
base64 = "0.22"
uuid = { version = "1.8", features = ["v4"] }
thiserror = "1.0"
tracing = "0.1"
tun2 = "1.0"
sys-info = "0.9"

[dev-dependencies]
tokio-test = "0.4"
